# llm_apis

./: README.md  pyproject.toml
examples/: factory_example.py  ollama_tool.py  transformers_function.py  transformers_json.py
src/llm_apis/: agent_responses.py  llm_tool.py  response_parsing.py  tool_api.py  transformers_api.py
